@@ -26,8 +26,6 @@ protected:
   bool winCharSet;  // true for Windows char set; false for Mac char set
   int latexFlag;    // 0 do nothing; 1 win char set; 2 mac char set
 
-  static int idxVowelToneMark (unsigned char ch);
-
   void AdjustText (unsigned char* input, unsigned char* output);
 
 private:
